--- a/todoproject/app/views/layouts/application.html.erb
+++ b/todoproject/app/views/layouts/application.html.erb
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Todoproject</title>
+    <title>TODO</title>
+    
+    <meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -9,7 +15,35 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <%= yield %>
+  <body class="is-preload">
+    <div id="wrapper">
+
+    	<!-- Header -->
+      <header id="header" class="alt">
+        <h1>TODO</h1>
+      </header> 
+
+      <!-- Nav -->
+      <nav id="nav">
+        <ul>
+          <li><a href="/tasks#school" class="active">School</a></li>
+          <li><a href="/tasks#work">Work</a></li>
+          <li><a href="/tasks#misc">Miscellaneous</a></li>
+          <li><%= link_to 'Add Task', new_task_path %></li>
+        </ul>
+      </nav>
+      
+      <!-- Main -->
+      <div id="main">
+        <%= yield %>
+      </div>
+    </div>
+    <script src="assets/javascripts/jquery.min.js"></script>
+    <script src="assets/javascripts/jquery.scrollex.min.js"></script>
+    <script src="assets/javascripts/jquery.scrolly.min.js"></script>
+    <script src="assets/javascripts/browser.min.js"></script>
+    <script src="assets/javascripts/breakpoints.min.js"></script>
+    <script src="assets/javascripts/util.js"></script>
+    <script src="assets/javascripts/main.js"></script>
   </body>
 </html>
